# quickstart-desktop-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bnb_sdk/: CMakeLists.txt
bnb_sdk_manager/: CMakeLists.txt
bnb_sdk_manager/src/: BanubaClientToken.hpp  BanubaSdkManager.cpp  BanubaSdkManager.hpp  BanubaSdkManager.mm  GlfwWindow.cpp  GlfwWindow.hpp  GlfwWindow.mm  RenderThread.cpp  RenderThread.hpp  SdkResourcesPath.cpp
cmake/: copy_libs.cmake  libyuv.cmake  utils.cmake
example/: BanubaClientToken.hpp  CMakeLists.txt  main.cpp
example/renderer/: camera_renderer.cpp  camera_renderer.hpp  frame_surface_handler.cpp  frame_surface_handler.hpp  opengl.hpp  render_thread.cpp  render_thread.hpp  renderer.cpp  renderer.hpp  renderer_gl_context.cpp  renderer_gl_context.hpp
helpers/: CMakeLists.txt
helpers/src/: GlfwRenderer.cpp  GlfwRenderer.hpp  GlfwRenderer.mm  GlfwWindow.cpp  GlfwWindow.hpp  Utils.cpp  Utils.hpp  Utils.mm
offscreen_effect_player/: CMakeLists.txt
offscreen_effect_player/include/: offscreen_effect_player.hpp  utils.hpp
offscreen_effect_player/interfaces/: offscreen_effect_player.hpp
offscreen_effect_player/src/: offscreen_effect_player.cpp  utils.cpp
realtime-camera-preview/: CMakeLists.txt  main.cpp
resources/effects/DebugWireframe/: config.json
resources/effects/Lenovo_makeup/: config.js  config.json  makeup.js
resources/effects/Lenovo_makeup/modules/: index.js
resources/effects/Lenovo_makeup/modules/brows/: brow.frag  brow.vert  mat_texture.frag
resources/effects/Lenovo_makeup/modules/face-morph/: index.js
resources/effects/Lenovo_makeup/modules/face-shape/: index.js
resources/effects/Lenovo_makeup/modules/lips/: shiny.frag
resources/effects/Lenovo_makeup/modules/makeup/: index.js  makeup.frag  makeup.vert
resources/effects/Lenovo_makeup/modules/skin/: skin_color.glsl
resources/effects/Lenovo_makeup/modules/teeth/: teeth.frag  teeth.vert
resources/effects/TrollGrandma/: config.js
resources/effects/makeup/: config.js
resources/effects/makeup/modules/brows/: Brow.bsm2  index.js  mat_texture.vert
resources/effects/makeup/modules/eyes/: color.frag  color.vert  flare.frag  index.js  whitening.frag  whitening.vert
resources/effects/makeup/modules/lips/: index.js  matt.frag  matt.vert
resources/effects/makeup/modules/skin/: skin.frag
resources/effects/makeup/modules/teeth/: index.js
resources/effects/studio_light/: bg_n.frag  bg_n.vert  config.js  config.json  dual_filter_blur_downscale.frag  dual_filter_blur_downscale.vert  dual_filter_blur_upscale.frag  dual_filter_blur_upscale.vert  face_n.frag  face_n.vert  hblur.vert  studio_light.frag  studio_light.vert  vblur.frag  vblur.vert
single-image-processing/: CMakeLists.txt  main.cpp
videostream-processing/: CMakeLists.txt  main.cpp
